# ini2command

./: Cargo.toml  README.md  conf.ini
src/: main.rs
